--- a/index.html
+++ b/index.html
@@ -43,4 +43,5 @@ Nisi quis eleifend quam adipiscing vitae proin. In fermentum posuere urna nec ti
     </div>
     
 </body>
+<script src="script.js"></script>
 </html>
